Login Screen Resources written

--- a/src/sample/Language_en.properties
+++ b/src/sample/Language_en.properties
@@ -1,1 +1,6 @@
-TestKey=English
+loginError=Incorrect Username or Password
+usernameLabel=Username
+passwordLabel=Password
+ExitButton=Exit
+loginButton=Login
+mainScreenTitleLabel=Meeting Scheduling System
