--- a/src/sample/Language_fr.properties
+++ b/src/sample/Language_fr.properties
@@ -1,1 +1,6 @@
-TestKey=French
+loginError=Nom ou mot de passe incorrect
+usernameLabel=Nom d'utilisateur
+passwordLabel=Mot de passe
+ExitButton=Fermer
+loginButton=Connexion
+mainScreenTitleLabel=Système de planification des réunions
