Login appearance edited

--- a/src/sample/Language_fr.properties
+++ b/src/sample/Language_fr.properties
@@ -4,3 +4,5 @@ passwordLabel=Mot de passe
 ExitButton=Fermer
 loginButton=Connexion
 mainScreenTitleLabel=Système de planification des réunions
+LanguageLabel=Langue du système
+LocationLabel=Paramètres régionaux du système
