Add and Modify Appointment specific Error Messages done

--- a/src/sample/Language_fr.properties
+++ b/src/sample/Language_fr.properties
@@ -1,4 +1,4 @@
-loginError=Nom ou mot de passe incorrect
+loginError=Identifiant Invalide
 usernameLabel=Nom d'utilisateur
 passwordLabel=Mot de passe
 ExitButton=Fermer
